--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="row">
                     <div class="row vertical-align">
   
-                        <div class="col-md-8">
+                        <div class="col-md-9">
                             <div class="title">
                                 <h1>Detection of Line Artefacts in Lung Ultrasound Images of COVID-19 Patients via Non-Convex Regularization</h1>
                                 <div class="container-sm">
@@ -49,9 +49,9 @@
                                 </div>
                             </div>
                         </div>
-			<div class="col-md-4">
+			<div class="col-md-3">
 			    <p><a href='https://vilab.blogs.bristol.ac.uk'><img src="VIL_logo.svg" width="100%" height="20%" alt=""></a></p>
-			    <p><a href='https://www.bristol.ac.uk/vision-institute'><img src="bvilogo.svg" width="100%" height="20%" alt=""></a></p>
+			    <p><a href='https://www.bristol.ac.uk/vision-institute'><img src="BVI_colour.svg" width="100%" height="20%" alt=""></a></p>
 			    <p><a href='https://www.bristol.ac.uk'><img src="uob-logo.svg" width="100%" height="20%" alt=""></a></p>
                         </div>
                     </div>
