--- a/index.html
+++ b/index.html
@@ -31,18 +31,21 @@
                                         </div>
                                         <div class="col-sm-auto">
                                             <p><a href='https://www.researchgate.net/profile/Amazigh_Aguersif'>A. Aguersif</a></p>
-                                            <p>Service de Réanimation, CHU Purpan</p>
+                                            <p>Service de Réanimation</p>
+					    <p>CHU Purpan, Toulouse</p>
                                         </div>
                                         <div class="col-sm-auto">
                                             <p><a href='https://scholar.google.fr/citations?user=PvUrxU0AAAAJ&hl=en'>S. Silva</a></p>
-                                            <p>Service de Réanimation, CHU Purpan</p>
+                                            <p>Service de Réanimation</p>
+					    <p>CHU Purpan, Toulouse</p>
                                         </div>
                                         <div class="col-sm-auto">
                                             <p><a href='https://www.irit.fr/~Adrian.Basarab/'>A. Basarab</a></p>
-                                            <p>IRIT, University of Toulouse</p>
+                                            <p>IRIT</p>
+					    <p>University Paul Sabatier</p>
                                         </div>
                                         <div class="col-sm-auto">
-                                            <p><a href='http://www.bristol.ac.uk/engineering/people/alin-m-achim/index.html'>D.R. Bull</a></p>
+                                            <p><a href='http://www.bristol.ac.uk/engineering/people/alin-m-achim/index.html'>A. Achim</a></p>
                                             <p>University of Bristol</p>
                                         </div>
                                     </div>
@@ -62,17 +65,20 @@
                 <p>This project is concerned with the quantification of line artefacts in lung ultrasound (LUS) images of COVID-19 patients via a non-covex regularisation based methodology.</p>
 		<dl>
 			<dt>Funders</dt>
-			<p><dd>the UK Engineering and Physical Sciences Research Council (EPSRC) under grant EP/R009260/1</dd></p>
+			<p><dd>Engineering and Physical Sciences Research Council (EPSRC) under grant EP/R009260/1</dd></p>
+			<p><dd>EPSRC Impact Acceleration Award (IAA) from the University of Bristol</dd></p>
+			<p><dd>Leverhulme Trust Research Fellowship (INFHER)</dd></p>
       <p><dd> </dd></p>
 			<dt>Collaborators</dt>
-			<dd>Kustar/ MASDAR, UAE; FWC, Florida; EAD, UAE</dd>
+			<p><dd>Service de Réanimation, CHU Purpan, Toulouse </dd></p>
+			<p><dd>IRIT, University Paul Sabatier Toulouse </dd></p>
 		</dl>
             </div>
             <hr />
             <div class="container-md">
                 <h2>Abstract</h2>
-                <p> This paper describes the application of machine learning techniques to develop a state-of-the-art detection and prediction system for spatiotemporal events found within remote sensing data; specifically, Harmful Algal Bloom events (HABs). We propose an HAB detection system based on: a ground truth historical record of HAB events, a novel spatiotemporal datacube representation of each event (from MODIS and GEBCO bathymetry data) and a variety of machine learning architectures utilising state-of-the-art spatial and temporal analysis methods based on Convolutional Neural Networks (CNNs), Long Short-Term Memory (LSTM) components together with Random Forest and Support VectorMachine (SVM) classification methods. This work has focused specifically on the case study of the detection of Karenia Brevis Algae (K. brevis) HAB events within the coastal waters of Florida (over 2850 events from 2003 to 2018; an order of magnitude larger than any previousmachine learning detection study into HAB events). The development of multimodal spatiotemporal datacube data structures and associated novel machine learning methods give a unique architecture for the automatic detection of environmental events. Specifically, when applied to the detection of HAB events it gives a maximum detection accuracy of 91%and a Kappa coefficient of 0.81 for the Florida data considered. A HAB forecast system was also developed where a temporal subset of each datacube was used to predict the presence of a HAB in the future. This system was not significantly less accurate than the detection system being able to predict with 86% accuracy up to 8 days in the future. </p>
-            </div>
+                <p> In this paper, we present a novel method for line artefacts quantification in lung ultrasound (LUS) images of COVID-19 patients. We formulate this as a non-convex regularisation problem involving a sparsity-enforcing, Cauchy-based penalty function, and the inverse Radon transform. We employ a simple local maxima detection technique in the Radon transform domain, associated with known clinical definitions of line artefacts. Despite being non-convex, the proposed technique is guaranteed to convergence through our proposed Cauchy proximal splitting (CPS) method, and accurately identifies both horizontal and vertical line artefacts in LUS images. In order to reduce the number of false and missed detection, our method includes a two-stage validation mechanism, which is performed in both Radon and image domains. We evaluate the performance of the proposed method in comparison to the current state-of-the-art B-line identification method, and show a considerable performance gain with 87% correctly detected B-lines in LUS images of nine COVID-19 patients.
+	</div>
             <hr />
             <div class="container-md">
                 <h2 id="poster">Poster</h2>
