--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
                                     <div class="row justify-content-md-center">
                                         <div class="col-sm-auto">
                                             <p><a href='http://www.bristol.ac.uk/engineering/people/person/oktay-karakus/overview.html'>O. Karakuş</a></p>
-                                            <p>University of Bristol</p>
+                                            <p>VI Lab.</p>
+					    <p>University of Bristol</p>
                                         </div>
                                         <div class="col-sm-auto">
                                             <p><a href='http://www.bristol.ac.uk/engineering/people/person/pui-anantrasirichai/overview.html'>N. Anantrasirichai</a></p>
-                                            <p>University of Bristol</p>
+                                            <p>VI Lab.</p>
+					    <p>University of Bristol</p>
                                         </div>
                                         <div class="col-sm-auto">
                                             <p><a href='https://www.researchgate.net/profile/Amazigh_Aguersif'>A. Aguersif</a></p>
@@ -46,7 +48,8 @@
                                         </div>
                                         <div class="col-sm-auto">
                                             <p><a href='http://www.bristol.ac.uk/engineering/people/alin-m-achim/index.html'>A. Achim</a></p>
-                                            <p>University of Bristol</p>
+                                            <p>VI Lab.</p>
+					    <p>University of Bristol</p>
                                         </div>
                                     </div>
                                 </div>
@@ -60,6 +63,18 @@
                     </div>
                 </div>
             </div>
+	    <hr />
+	    <div class="container">
+                <div class="row">
+                    <div class="row vertical-align">
+                        <div class="col-md-9">
+                <h2 id="poster">Poster</h2>
+                <p><a href="BVI.png"><img src="BVI.png" alt="Poster" width=300 class="center" /></a></p>
+			</div>
+		   </div>
+	       </div>
+            </div>
+            <hr />
             <div class="container-md">
                 <h2>About</h2>
                 <p>This project is concerned with the quantification of line artefacts in lung ultrasound (LUS) images of COVID-19 patients via a non-covex regularisation based methodology.</p>
@@ -79,11 +94,6 @@
                 <h2>Abstract</h2>
                 <p> In this paper, we present a novel method for line artefacts quantification in lung ultrasound (LUS) images of COVID-19 patients. We formulate this as a non-convex regularisation problem involving a sparsity-enforcing, Cauchy-based penalty function, and the inverse Radon transform. We employ a simple local maxima detection technique in the Radon transform domain, associated with known clinical definitions of line artefacts. Despite being non-convex, the proposed technique is guaranteed to convergence through our proposed Cauchy proximal splitting (CPS) method, and accurately identifies both horizontal and vertical line artefacts in LUS images. In order to reduce the number of false and missed detection, our method includes a two-stage validation mechanism, which is performed in both Radon and image domains. We evaluate the performance of the proposed method in comparison to the current state-of-the-art B-line identification method, and show a considerable performance gain with 87% correctly detected B-lines in LUS images of nine COVID-19 patients.
 	</div>
-            <hr />
-            <div class="container-md">
-                <h2 id="poster">Poster</h2>
-                <p><a href="poster.pdf"><img src="poster.png" alt="Poster" width=300 class="center" /></a></p>
-            </div>
             <hr />
             <div class="container-md">
                 <h2 id="downloads">Downloads</h2>
