--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 <div class="row">
                     <div class="row vertical-align">
                         <div class="col-md-9">
-                <h2 id="poster">Poster</h2>
-                <p><a href="BVI.png"><img src="BVI.png" alt="Poster" width=300 class="center" /></a></p>
+                <h2 id="poster">Highlights</h2>
+                <p><a href="BVI.png"><img src="BVI.png" alt="Poster" width="100%" height="40%" alt="" /></a></p>
 			</div>
 		   </div>
 	       </div>
