--- a/index.html
+++ b/index.html
@@ -98,28 +98,29 @@
             <div class="container-md">
                 <h2 id="downloads">Downloads</h2>
                 <ul>
-                    <li>Paper <a href="https://ieeexplore.ieee.org/abstract/document/9113293">[PDF]</a> <a href="https://arxiv.org/abs/1912.02305">[ArXiv]</a></li>
-                    <li>Supplementary <a href="poster.pdf">[Poster]</a></li>
+                    <li>Paper <a href="https://ieeexplore.ieee.org/abstract/document/9165792">[IEEE]</a> </li>
+                    <li>Paper <a href="https://arxiv.org/abs/2005.03080">[ArXiv]</a></li>
                 </ul>
             </div>
             <div class="container-md">
-                <h2>Code (on Github)</h2>
+                <h2>Matlab Code</h2>
                 <ul>
-                    <li><a href='https://github.com/csprh/extractData'>Matlab Based Code for DataCube Extraction</a> </li>
-                    <li><a href='https://github.com/csprh/modelHAB'>Python code for HAB classification</a> </li>
+                    <li><a href='https://github.com/oktaykarakus/QuantLUS-CPS-v1.0'>GitHub</a> </li>
+                    <li><a href='https://data.bris.ac.uk/data/dataset/z47pfkwqivfj2d0qhyq7v3u1i'>University of Bristol Data Repository</a> </li>
                 </ul>
             </div>
             <div class="container-md">
                 <h2>Citation</h2>
                 <pre class="citation">
-@article{hill2020habnet,
-  title={HABNet: Machine Learning, Remote Sensing-Based Detection of Harmful Algal Blooms},
-  author={Hill, Paul R and Kumar, Anurag and Temimi, Marouane and Bull, David R},
-  journal={IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing},
-  volume={13},
-  pages={3229--3239},
+@article{karakus2020COVID,
+  author={O. {Karakuş} and N. {Anantrasirichai} and A. {Aguersif} and S. {Silva} and A. {Basarab} and A. {Achim}},
+  journal={IEEE Transactions on Ultrasonics, Ferroelectrics, and Frequency Control}, 
+  title={Detection of Line Artifacts in Lung Ultrasound Images of COVID-19 Patients Via Nonconvex Regularization}, 
   year={2020},
-  publisher={IEEE}}</pre>
+  volume={67},
+  number={11},
+  pages={2218-2229},
+  doi={10.1109/TUFFC.2020.3016092}}</pre>
             </div>
 
         </div>
