--- a/index.html
+++ b/index.html
@@ -115,12 +115,13 @@
 @article{karakus2020COVID,
   author={O. {Karakuş} and N. {Anantrasirichai} and A. {Aguersif} and S. {Silva} and A. {Basarab} and A. {Achim}},
   journal={IEEE Transactions on Ultrasonics, Ferroelectrics, and Frequency Control}, 
-  title={Detection of Line Artifacts in Lung Ultrasound Images of COVID-19 Patients Via Nonconvex Regularization}, 
+  title={Detection of Line Artifacts in Lung Ultrasound Images of {COVID-19} Patients Via Nonconvex Regularization}, 
   year={2020},
   volume={67},
   number={11},
   pages={2218-2229},
-  doi={10.1109/TUFFC.2020.3016092}}</pre>
+  doi={10.1109/TUFFC.2020.3016092}
+  }</pre>
             </div>
 
         </div>
